fixed bug where error does not appear on blur

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   </mat-form-field>
 </div>
 <h2>Single Control</h2>
-<div class="container">
+<div class="form-group">
   <mat-form-field>
     <mat-label>Single Control</mat-label>
     <input [formControl]="singleControl" matInput>
