--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,15 @@
   width: 700px;
   margin: 0 auto;
 
+  h2 {
+    margin: 0;
+    line-height: 40px;
+  }
+
   .form-group {
     display: flex;
     flex-direction: column;
+    margin: 16px;
 
     mat-form-field {
       width: 200px;
