--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,12 +35,12 @@
 <h2>Form Group Errors</h2>
 <form class="form-group" [formGroup]="formGroup" matErrorGroupName="formGroup" autocomplete="off">
   <mat-form-field>
-    <mat-label>Validators.required</mat-label>
+    <mat-label>Validators.required, Validators.pattern('[a-zA-Z ]*')</mat-label>
     <input formControlName="firstName" matInput>
     <mat-error matErrorTailor></mat-error>
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Validators.required</mat-label>
+    <mat-label>Validators.required, Validators.pattern('[a-zA-Z ]*')</mat-label>
     <input formControlName="lastName" matInput>
     <mat-error matErrorTailor></mat-error>
   </mat-form-field>
